--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
     <head>
         <style>
+            body {
+                background-color: #f0f0f4;
+                position:absolute;
+                top:0;
+                left:0;
+                right:0;
+                bottom:0;
+            }
             @font-face {
                 font-family: emoji;
                 src: url(https://cdn.jsdelivr.net/npm/twemoji-colr-font@14.0.2/twemoji.woff2);
