--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
                 left:0;
                 right:0;
                 bottom:0;
+                margin: 0;
             }
             @font-face {
                 font-family: emoji;
@@ -53,7 +54,7 @@
                 text-align: center;
                 font-family: Helvetica, sans-serif;
                 max-width: 420px;
-                margin: 0px auto;
+                margin: 8px auto;
             "
         >
             <h1>The Emerald Serpent</h1>
